--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<html></html>
+<html>
+    <head>
+        <title>demo</title>
+        <link rel="stylesheet" href="assets/css/style.css">
+    </head>
+    <body>
+        <div class="nav-bar">
+            
+        </div>
+
+    </body>
+</html>
