--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         <li><a href="">contact</a></li>
       </ul>
     </div>
+    <div class="hero">
+      <div class="bg"></div>
+      <div class="black"></div>
+      <div class="center-txt text-center">
+        <h1>Typography</h1>
+        <div class="btn1">Hello</div>
+      </div>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
