--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
   <body>
     <div class="nav-bar">
       <ul class="d-flex">
-        <li><a href="">home</a></li>
-        <li><a href="">about</a></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="#sec-two">about</a></li>
         <li><a href="">blog</a></li>
         <li><a href="">portfolio</a></li>
         <li><a href="">contact</a></li>
       </ul>
     </div>
-    <div class="hero">
+    <div class="hero" id="hero">
       <div class="bg"></div>
       <div class="black"></div>
-      <div class="center-txt text-center">
-        <h1>Typography</h1>
-        <div class="btn1">Hello</div>
-      </div>
+      <h1 class="center-txt">Typography</h1>
+      <a href="https://www.youtube.com/" target="blank">
+        <div class="btn1 center-txt mt-5 px-2 pb-1">
+          Hello
+        </div>
+      </a>
     </div>
+
+    <div class="section-two" id="sec-two">Hey</div>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
