--- a/course/web/.html
+++ b/course/web/.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <tiltle>Alert Examples</tiltle>
-        <meta charset="utf-8">
-        </head>
-        <body>
-            <h3>Alert Examples in vscode</h3>
-          <strong>Success!</strong>Represent a successful or positive action.</br>  
-          <strong>Info!</strong> Represent a neutral informative change.</br>
-</body>
-</html>   
-
+<html>
+  <head>
+    <title>Scared heart shrine</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body></body>
 </html>
